# facebookresearch-audiocraft-revamp

./: README.md  main.py  pyproject.toml  requirements.txt
audiocraft/models/: audiogen.py
audiocraft/modules/: transformer.py
