[project]
name = "audiocraft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "av>=14.4.0",
    "demucs>=4.0.1",
    "einops>=0.8.1",
    "encodec>=0.1.1",
    "flashy>=0.0.2",
    "gradio>=5.33.0",
    "huggingface-hub>=0.32.4",
    "hydra-colorlog>=1.2.0",
    "hydra-core>=1.3.2",
    "julius>=0.2.7",
    "llvmlite>=0.44.0",
    "num2words>=0.5.14",
    "numpy>=2.3.0",
    "pesq>=0.0.4",
    "protobuf>=6.31.1",
    "pystoi>=0.4.1",
    "soundfile>=0.13.1",
    "spacy>=3.8.7",
    "torchdiffeq>=0.2.5",
    "torchmetrics>=1.7.2",
    "tqdm>=4.67.1",
]
